Added UVM article

--- a/about/index.html
+++ b/about/index.html
@@ -28,8 +28,7 @@
     <header id="post-header">
         <h1>About</h1>
         <div></div>
-    </header><p>Ladies, and Gentleman!</p>
-<p>My name is Thijs Haker (TheDevtop).
+    </header><p>My name is Thijs Haker (TheDevtop).
 I am an UNIX engineer, and I write programmes.</p>
 <p>This blog is about my journey trough the world of Computer Science and IT.</p>
 </article>
