Added article, and modified the about page.

--- a/about/index.html
+++ b/about/index.html
@@ -28,9 +28,12 @@
     <header id="post-header">
         <h1>About</h1>
         <div></div>
-    </header><p>My name is Thijs Haker (TheDevtop).
-I am an UNIX engineer, and I write programmes.</p>
-<p>This blog is about my journey trough the world of Computer Science and IT.</p>
+    </header><p>My name is Thijs Haker (TheDevtop).</p>
+<p>I&rsquo;m a Dutch UNIX engineer whom happens to find himself writing a lot of software.</p>
+<p>This blog is primarily going to be about the technology I encounter, be it professional, personal, or by strange coincidence.</p>
+<h3 id="contact">Contact</h3>
+<p><strong>Github:</strong> <a href="https://github.com/TheDevtop">TheDevtop</a></p>
+<p><strong>LinkedIn:</strong> <a href="https://nl.linkedin.com/in/thijs-haker-491751177">Thijs Haker</a></p>
 </article>
 
         </main><footer id="footer">
