--- a/uvm-a-secret-love-letter/index.html
+++ b/uvm-a-secret-love-letter/index.html
@@ -31,7 +31,7 @@
                 <time>October 3, 2023</time>
             </div>
     </header><p>Recently, I had some DIMM corruption, which led me to decommission one of my machines.
-The hole situation got me thinking about the fragility of software and how not even the most elegant abstraction can save you from the grim reality of hardware failure.
+The hole situation got me thinking about the fragility of software and how not even the most elegant abstraction, can save you from the grim reality of hardware failure.
 It also happens to be a good reason to talk about one of my favorite pieces of software: <a href="https://www.usenix.org/legacy/event/usenix99/full_papers/cranor/cranor.pdf">The UVM Virtual Memory System</a>.</p>
 <h3 id="let-there-be-light">Let there be light</h3>
 <p>UVM is the virtual memory subsystem used in the kernels of <a href="https://www.openbsd.org/">OpenBSD</a> and <a href="https://www.netbsd.org/">NetBSD</a>.
