--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 <h3>Posts</h3>
 <ul id="posts">
     <li>
+    <a href="https://thedevtop.github.io/the-compiler-is-right/">
+        The compiler is right
+        <small><time>Oct 3, 2023</time></small>
+    </a>
+</li>
+
+    <li>
     <a href="https://thedevtop.github.io/uvm-a-secret-love-letter/">
         UVM: A secret love letter
         <small><time>Oct 3, 2023</time></small>
