Added netbsd article

--- a/software-defined-automatic-calculator/index.html
+++ b/software-defined-automatic-calculator/index.html
@@ -46,7 +46,7 @@ The evalutation function matches and executes the expression, returning a value.
 <h3 id="lisp-the-soul-of-a-new-machine">LISP: The soul of a new machine</h3>
 <p>To be true to myself, I know some LISP, but I never learned it formally from first principles.
 So that is what I will be doing.
-And who knows, maybe I will write an article about my experience learning LISP <em>(This is called: Unapologetic foreshadowing)</em>.</p>
+And who knows, maybe I will write an article about my experience learning LISP <em>(This is unapologetic foreshadowing)</em>.</p>
 <h3 id="sources">Sources</h3>
 <ul>
 <li><a href="https://en.wikipedia.org/wiki/42_(number)#The_Hitchhiker's_Guide_to_the_Galaxy">The answer to everything (Wiki)</a></li>
