Cleanup and added new story

--- a/lip-service-to-a-lisp-serializer/index.html
+++ b/lip-service-to-a-lisp-serializer/index.html
@@ -12,7 +12,7 @@
     <title>Lip service to a LISP serializer</title>
 </head>
 <body><header id="banner">
-    <h2><a href="https://thedevtop.github.io">TheDevtop</a></h2>
+    <h2><a href="https://thedevtop.github.io/">TheDevtop</a></h2>
     <nav>
         <ul>
             <li>
