--- a/uvm-a-love-letter/index.html
+++ b/uvm-a-love-letter/index.html
@@ -8,11 +8,11 @@
     
     <link rel="stylesheet" href="/css/style.min.css">
 
-    <link rel="canonical" href="https://thedevtop.github.io/uvm-a-secret-love-letter/" />
-    <title>UVM: A secret love letter</title>
+    <link rel="canonical" href="https://thedevtop.github.io/uvm-a-love-letter/" />
+    <title>UVM: A love letter</title>
 </head>
 <body><header id="banner">
-    <h2><a href="https://thedevtop.github.io">TheDevtop</a></h2>
+    <h2><a href="https://thedevtop.github.io/">TheDevtop</a></h2>
     <nav>
         <ul>
             <li>
@@ -26,7 +26,7 @@
 <main id="content">
 <article>
     <header id="post-header">
-        <h1>UVM: A secret love letter</h1>
+        <h1>UVM: A love letter</h1>
         <div>
                 <time>October 3, 2023</time>
             </div>
