--- a/compose-files-with-macros/index.html
+++ b/compose-files-with-macros/index.html
@@ -12,7 +12,7 @@
     <title>Compose files with macros</title>
 </head>
 <body><header id="banner">
-    <h2><a href="https://thedevtop.github.io">TheDevtop</a></h2>
+    <h2><a href="https://thedevtop.github.io/">TheDevtop</a></h2>
     <nav>
         <ul>
             <li>
