--- a/software-defined-automatic-calculator/index.html
+++ b/software-defined-automatic-calculator/index.html
@@ -12,7 +12,7 @@
     <title>Software Defined Automatic Calculator</title>
 </head>
 <body><header id="banner">
-    <h2><a href="https://thedevtop.github.io">TheDevtop</a></h2>
+    <h2><a href="https://thedevtop.github.io/">TheDevtop</a></h2>
     <nav>
         <ul>
             <li>
